feat: react-query implementation

--- a/src/css/reset-password.css
+++ b/src/css/reset-password.css
@@ -3,9 +3,11 @@
   height: 100vh;
   display: grid;
   place-items: center;
+  background-color: #F7F9FB;
 
   .wrapper {
-    padding: 2rem 5rem;
+    width: 20%;
+    padding: 2rem 3rem;
     margin: 0 auto;
     text-align: center;
     background-color: white;
@@ -15,13 +17,18 @@
     gap: 20px;
   }
 
-  .logo img {
-    max-width: 100%;
-    height: auto;
+  .logo {
+    width: 45%;
   }
 
   h2 {
-    margin-bottom: 20px;
+    padding: 0;
+    margin: 0;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+    text-align: center;
+
   }
 
   form {
@@ -48,10 +55,12 @@
     color: #1c1c1c33;
   }
 
-  .icon {
+  .showpass-icon {
     padding: 0;
     margin: 0;
-    margin-left: -20px;
+    font-size: 14px;
+    margin-left: -30px;
+    transform: translateY(-50%);
   }
 
   .err {
@@ -71,10 +80,19 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
   }
 
   .button:hover {
     background-color: #333;
+  }
+
+  .button.load{
+    cursor: not-allowed;
+    opacity: 40%;
   }
 
   footer {
@@ -87,4 +105,46 @@
   .reset-container .wrapper {
     padding: 2rem;
   }
+
+  .reset-container h2 {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .reset-container .button {
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .reset-container .form input::placeholder {
+    font-size: 8px;
+    line-height: 15px;
+  }
+
+  .reset-container .wrapper {
+    padding: 1rem 1rem;
+  }
 }
+
+@media only screen and (min-width: 600px) and (max-width: 900px) {
+  .reset-container h2 {
+    font-size: 20px;
+    line-height: 26px;
+  }
+
+  .reset-container .button {
+    font-size: 15px;
+    line-height: 20px;
+  }
+
+  .reset-container .form input::placeholder {
+    font-size: 10px;
+    line-height: 15px;
+  }
+
+  .reset-container .wrapper {
+    padding: 1rem 1rem;
+  }
+}
+
+@media only screen and (min-width: 900px) and (max-width: 1200px) {}
