feat: formik & yup integration + remove unwanted css

--- a/src/css/reset-password.css
+++ b/src/css/reset-password.css
@@ -1,12 +1,12 @@
 .reset-container {
   width: 100%;
-  height: 100vh;
+  height: 97vh;
   display: grid;
   place-items: center;
   background-color: #F7F9FB;
 
   .wrapper {
-    width: 20%;
+    /* width: 20%; */
     padding: 2rem 3rem;
     margin: 0 auto;
     text-align: center;
@@ -60,7 +60,7 @@
     margin: 0;
     font-size: 14px;
     margin-left: -30px;
-    transform: translateY(-50%);
+    transform: translateX(-50%);
   }
 
   .err {
@@ -69,6 +69,7 @@
     margin: 0;
     font-size: 10px;
     line-height: 18px;
+    padding-left: 10px;
     color: red;
   }
 
@@ -102,6 +103,10 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .reset-container{
+    height: 91vh;
+  }
+
   .reset-container .wrapper {
     padding: 2rem;
   }
@@ -147,4 +152,8 @@
   }
 }
 
-@media only screen and (min-width: 900px) and (max-width: 1200px) {}
+@media only screen and (min-width: 1200px) {
+  .reset-container .wrapper {
+    width: 20%;
+  }
+}
