--- a/src/css/PaymentSuceed.css
+++ b/src/css/PaymentSuceed.css
@@ -1,28 +1,30 @@
-.container {
+.sucess-container {
     text-align: center;
     margin-top: 50px;
-    height: 100vh;
+    height: 90vh;
     display: grid;
     place-items: center;
-  }
-  
-  .icon {
+}
+
+.sucess-container .icon {
     font-size: 100px;
     margin-bottom: 50px;
     color: green;
-  }
-  
-  h1 {
+}
+
+.sucess-container h1 {
     font-size: 2.5em;
     margin: 20px 0;
-  }
-  
-  p {
+    padding: 0;
+}
+
+.sucess-container p {
     font-size: 1.2em;
     margin: 20px 0;
-  }
-  
-  .button {
+    padding: 0;
+}
+
+.sucess-container .button {
     display: inline-block;
     padding: 10px 20px;
     font-size: 1em;
@@ -30,9 +32,26 @@
     background-color: #007bff;
     text-decoration: none;
     border-radius: 5px;
-  }
-  
-  .button:hover {
+}
+
+.sucess-container .button:hover {
     background-color: #0056b3;
-  }
-  
+}
+
+
+@media (max-width: 600px) {
+    .sucess-container{
+        height: 83vh;
+    }
+
+    .sucess-container h1{
+        font-size: 1.5rem;
+    }
+
+    .sucess-container p{
+        font-size: 1rem;
+    }
+    .sucess-container .icon{
+        font-size: 75px;
+    }
+}
