--- a/src/css/RequestHardware.css
+++ b/src/css/RequestHardware.css
@@ -1,6 +1,6 @@
 .reqhardware-container {
   width: 100%;
-  height: 100vh;
+  height: 97vh;
   display: grid;
   place-items: center;
 
@@ -11,7 +11,7 @@
     border-radius: 0.5rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: grid;
-    gap: 40px;
+    gap: 1rem;
     justify-items: center;
   }
 
@@ -21,6 +21,8 @@
     line-height: 28.8px;
     text-align: center;
     color: #000000;
+    margin: 0;
+    padding: 0;
   }
 
   .title {
@@ -29,6 +31,8 @@
     line-height: 21px;
     text-align: center;
     color: #828282;
+    margin: 0;
+    padding: 0;
   }
 
   .name {
@@ -37,6 +41,8 @@
     line-height: 30px;
     text-align: center;
     color: #000000;
+    margin: 0;
+    padding: 0;
   }
 
   .address {
@@ -45,12 +51,14 @@
     line-height: 19.6px;
     text-align: center;
     color: #000000;
+    margin: 0;
+    padding: 0;
   }
 
   .price-container {
     width: 100%;
     display: flex;
-    gap: 10rem;
+    gap: 5rem;
     justify-content: center;
     align-items: center;
     padding: 0rem 3rem;
@@ -58,11 +66,10 @@
 
   .quantity {
     display: flex;
-    gap: 15px;
     align-items: center;
     background: #e0e0e0;
     border-radius: 2rem;
-    padding: 1rem 1.5rem;
+    /* padding: 0.5rem 1.5rem; */
   }
 
   .quantity p {
@@ -72,6 +79,9 @@
     text-align: center;
     color: #000000;
     cursor: pointer;
+    margin: 0;
+    padding: 1rem;
+    border-radius: 50%;
   }
 
   .price {
@@ -98,13 +108,22 @@
   }
 }
 
+
 @media (max-width: 600px) {
+  .reqhardware-container {
+    height: 91vh;
+  }
+
   .reqhardware-container .wrapper {
-    width: 100%;
+    width: 90%;
+    /* height: 100%; */
+    padding: 3rem 0;
+    gap: 1rem;
   }
 
   .reqhardware-container .wrapper .price-container {
     gap: 5rem;
+    width: auto;
   }
 }
 
