--- a/src/App.css
+++ b/src/App.css
@@ -175,11 +175,19 @@ input[type=checkbox] {
     overflow: auto;
 }
 
+.outlet{
+    margin-top: 100px;
+}
+
 header {
-    background: transparent;
+    position: fixed;
+    /* background: transparent; */
+    background-color: #fff;
     padding: 14px 20px;
     border-bottom: 1px solid rgb(0 0 0 / 10%);
     margin-bottom: 30px;
+    z-index: 999;
+    width: calc(100vw - 280px);
 }
 
 .breadcrumb {
@@ -358,6 +366,12 @@ canvas {
     display: flex;
     align-items: center;
     gap: 10px;
+}
+
+.profilepicture{
+    width: 30px;
+    border-radius: 50%;
+    aspect-ratio: 1/1;
 }
 
 .theme-table {
@@ -562,8 +576,8 @@ canvas {
     gap: 20px;
 }
 
-span.Order-Received-btn,
-span.Delivered-btn,
+span.order_received-btn,
+span.delivered-btn,
 span.Cancel-btn {
     background: gray;
     width: 170px;
@@ -577,11 +591,11 @@ span.Cancel-btn {
     cursor: pointer;
 }
 
-span.Order-Received-btn {
+span.order_received-btn {
     background: #1C1C1C;
 }
 
-span.Delivered-btn {
+span.delivered-btn {
     background: #27AE60;
 }
 
@@ -589,8 +603,8 @@ span.Cancel-btn {
     background: #EB5757;
 }
 
-span.Order-Received-btn:hover,
-span.Delivered-btn:hover,
+span.order_received-btn:hover,
+span.delivered-btn:hover,
 span.Cancel-btn:hover {
     opacity: 0.8;
 }
