Bugs Solved and design finilized

--- a/src/App.css
+++ b/src/App.css
@@ -330,7 +330,6 @@ canvas {
     border-radius: 16px;
     margin-bottom: 30px;
     height: 500px;
-    overflow-y: auto;
 }
 
 .hotspot h1 {
@@ -338,6 +337,12 @@ canvas {
     font-weight: 600;
     line-height: 20px;
     margin-bottom: 20px;
+}
+
+.location-list {
+    padding-right: 20px;
+    height: 90%;
+    overflow-y: auto;
 }
 
 .location {
@@ -378,11 +383,15 @@ canvas {
     aspect-ratio: 1/1;
 }
 
+table#example {
+    margin-top: 30px;
+}
+
 .theme-table {
     background: #F7F9FB;
     padding: 24px;
     border-radius: 16px;
-    /* margin-bottom: 30px; */
+    margin-bottom: 30px;
 }
 
 .tab-heading {
@@ -484,7 +493,8 @@ canvas {
     outline: none !important;
 }
 
-.theme-table form input.form-control {
+.theme-table form input.form-control,
+.theme-table form select.form-control {
     height: 60px;
     border-radius: 12px;
     margin-bottom: 30px;
@@ -621,8 +631,8 @@ button.Cancel-btn:hover {
 
 .err {
     text-align: left;
-    padding: 0;
-    margin: 0;
+    /* padding: 0; */
+    padding: -30px 0 20px 0;
     font-size: 10px;
     line-height: 18px;
     padding-left: 10px;
@@ -644,6 +654,10 @@ button.Cancel-btn:hover {
     justify-content: space-between;
     margin-bottom: 10px;
     padding-top: 10px;
+}
+
+.pagiation-right {
+    margin-right: 7%;
 }
 
 .pagiation img {
@@ -695,6 +709,65 @@ button.Cancel-btn:hover {
 
 .theme-table table tbody tr td:nth-last-of-type(1) {
     line-break: unset;
+}
+
+.nodata {
+    &::after {
+        content: "-";
+        margin-left: 5px;
+    }
+}
+
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    backdrop-filter: blur(1px);
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.popup-buttons {
+    margin-top: 20px;
+    display: flex;
+    justify-content: end;
+    gap: 5px;
+}
+
+.popup-button {
+    width: 80px;
+    border-radius: 12px;
+    background-color: rgb(28 28 28 / 5%);
+    color: #1C1C1C;
+    padding: 12px;
+    text-decoration: none;
+    font-weight: 700;
+    box-shadow: none !important;
+    outline: none !important;
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.popup-button.confirm {
+    color: #EB5757;
+    background: #FDECEC;
+    border-bottom: 1px solid #EFC7C7;
+}
+
+.popup-button:hover {
+    opacity: 0.5;
 }
 
 .loader {
