--- a/src/App.css
+++ b/src/App.css
@@ -401,11 +401,28 @@ table#example {
   justify-content: space-between;
 }
 
+.tab-heading .count{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
 .tab-heading h3 {
   font-size: 16px;
   font-weight: 600;
   line-height: 24px;
   margin-bottom: 0;
+}
+
+.tab-heading p {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  margin-bottom: 0;
+  background-color: #f3f3f3;
+  border: var(--bs-border-width) solid var(--bs-border-color);
+  padding: 0px 15px;
+  border-radius: 5px;
 }
 
 .theme-table table thead tr th,
@@ -719,8 +736,7 @@ button.Cancel-btn:hover {
 }
 .companynamenodata {
   &::after {
-    content: "OTHERS";
-    margin-left: 5px;
+    content: "Others";
   }
 }
 
