--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 .login-box {
     background: #fff;
     margin: 60px 0 40px 0;
-    padding: 100px;
+    padding: 8%;
     border-radius: 24px;
 }
 
@@ -103,17 +103,47 @@ input[type="checkbox"] {
     overflow: auto;
     border-right: 1px solid #0000001a;
     float: left;
+    transition: all 0.3s;
+    left: 0;
 }
 
 .sidebar .logo {
     text-align: center;
     padding: 10px 0 20px 0;
+    width: 240px;
+    margin-left: 40px;
 }
 
 .sidebar .logo img {
     width: 90%;
 }
+.toggle {
+    position: fixed;
+    width: 30px;
+    top: 20px;
+    left: 5px;
+    z-index: 999999;
+    background: #f7f7f7;
+    padding: 0px;
+    border-radius: 0px 4px 4px 0px;
+}
+.toggle img {
+    width: 100%;
+}
 
+.dashboard.active .sidebar {
+    left: -280px;
+    transition: all 0.3s;
+    position: absolute;
+}
+.dashboard.active .content {
+    width: calc(100% - 1px);
+    /* transition: all 0.3s; */
+}
+.dashboard.active header{
+    width: calc(100% - 1px);
+    padding-left: 40px;
+}
 .sidebar ul {
     padding: 0;
     margin: 0;
@@ -173,6 +203,7 @@ input[type="checkbox"] {
     float: left;
     height: 100vh;
     overflow: auto;
+    /* transition: all 0.3s; */
 }
 
 .outlet {
@@ -876,5 +907,61 @@ button.Cancel-btn:hover {
     .theme-table thead tr th,
     .theme-table table tr td {
         padding: 12px 10px !important;
+    }
+}
+@media only screen and (max-width: 1024px) {
+    .sidebar {
+        left: -280px;
+        transition: all 0.3s;
+        position: absolute;
+    }
+    .content {
+        width: calc(100% - 1px);
+    }
+    header{
+        width: calc(100% - 1px);
+    }
+    .content {
+        width: calc(100% - 1px);
+    }
+    header {
+        width: calc(100vw - 1px);
+        padding-left: 40px;
+    }
+    .dashboard.active .sidebar {
+        left: 0px;
+        transition: all 0.3s;
+        position: absolute;
+        z-index: 9999;
+    }
+    .outlet {
+        margin-top: 140px;
+    }
+}
+@media only screen and (max-width: 768px) {
+    .tab-heading {
+        flex-direction: column;
+    }
+    .tbl-filter {
+        flex-direction: column;
+    }
+    .tbl-filter button {
+        width: 100%;
+    }
+    .company-info {
+        flex-direction: column;
+    }
+    .comapny-titles {
+        width: 100%;
+    }
+    .comapny-det {
+        width: 100%;
+        flex-direction: column;
+    }
+    .comapny-det .c-info {
+        width: 100%;
+    }
+    .saveform {
+        text-align: center;
     }
 }
