--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,19 @@
     outline: none !important;
 }
 
+.password-field {
+    position: relative;
+}
+
+.password-toggle-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #888;
+}
+
 .copyright {
     margin-bottom: 30px;
 }
@@ -360,11 +373,11 @@ canvas {
     line-height: 20px;
 }
 
-.location .viewlocation{
+.location .viewlocation {
     font-size: medium;
     cursor: pointer;
 
-    &:hover{
+    &:hover {
         font-size: large;
     }
 }
@@ -768,6 +781,7 @@ button.Cancel-btn:hover {
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 9999;
 }
 
 .popup-buttons {
@@ -805,7 +819,7 @@ button.Cancel-btn:hover {
     text-decoration: none;
     color: black;
 
-    &:hover{
+    &:hover {
         text-decoration: underline;
     }
 }
@@ -852,7 +866,7 @@ button.Cancel-btn:hover {
     border: 1px solid rgba(128, 128, 128, 0.537);
 }
 
-.filecontainer button{
+.filecontainer button {
     outline: none;
     border: none;
     box-shadow: 0 0 1px rgba(128, 128, 128, 0.167);
@@ -860,7 +874,7 @@ button.Cancel-btn:hover {
     border-radius: 10px;
 }
 
-.filecontainer p{
+.filecontainer p {
     margin: 0;
     font-weight: 500;
     font-size: medium;
@@ -869,7 +883,7 @@ button.Cancel-btn:hover {
 .map {
     height: 100vw;
     width: 100vh;
-  }
+}
 
 @media only screen and (max-width: 1200px) {
 
