--- a/src/App.css
+++ b/src/App.css
@@ -951,6 +951,43 @@ button.Cancel-btn:hover {
     text-align: center;
 }
 
+.req_container {
+    display: flex;
+    flex-direction: column;
+    /* width: 100%; */
+    margin-top: 50px;
+    position: absolute;
+    z-index: 9;
+
+    .req_count {
+        /* width: 50%; */
+        /* text-align: center; */
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        margin: 5px 10px;
+        padding: 10px;
+        /* border: 1px solid black; */
+        border-radius: 10px;
+        background-color: #fff;
+        font-weight: 600;
+
+        p {
+            padding: 0;
+            margin: 0;
+            font-size: 16px;
+            font-weight: 600;
+            line-height: 24px;
+            margin-bottom: 0;
+            background-color: #f3f3f3;
+            border: var(--bs-border-width) solid var(--bs-border-color);
+            padding: 0px 15px;
+            border-radius: 5px;
+        }
+
+    }
+}
+
 @media only screen and (max-width: 1200px) {
 
     .theme-table thead tr th,
