--- a/src/App.css
+++ b/src/App.css
@@ -1053,8 +1053,8 @@ button.Cancel-btn:hover {
     align-items: center;
     justify-content: center;
     width: 100%;
-    min-height: 250px;
     overflow: hidden;
+    height: 250px;
 }
 
 .img-preview-container img {
@@ -1188,7 +1188,7 @@ width: 20%;
         text-align: center;
     }
     .img-preview-container {
-        min-height: 150px;
+       height: 300px;
     }
     .mt-responsive{
         margin-top: 20px;
