--- a/src/App.css
+++ b/src/App.css
@@ -669,6 +669,67 @@ table#example {
     line-break: anywhere;
 }
 
+.comapny-det .c-ser {
+    padding: 10px 2%;
+    width: 33%;
+    position: relative;
+}
+
+.comapny-det .c-ser2 {
+    padding: 10px 2%;
+    width: 33%;
+}
+
+.comapny-det .c-ser::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 10%;
+    width: 1px;
+    height: 80%;
+    background-color: #d9d9d9;
+}
+
+.comapny-det .c-ser span {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    color: rgb(28 28 28 / 40%);
+}
+
+.comapny-det .c-ser p {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+    line-break: anywhere;
+}
+
+.comapny-det .c-ser2::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 10%;
+    width: 1px;
+    height: 80%;
+    background-color: #d9d9d9;
+}
+
+.comapny-det .c-ser2 span {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    color: rgb(28 28 28 / 40%);
+}
+
+.comapny-det .c-ser2 p {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+    line-break: anywhere;
+}
+
 .vehiclpic {
     /* background: #fff; */
     padding: 12px 20px;
