--- a/src/css/reset-password.css
+++ b/src/css/reset-password.css
@@ -1,4 +1,5 @@
 .reset-container {
+
   width: 100%;
   height: 97vh;
   display: grid;
@@ -7,6 +8,7 @@
 
   .wrapper {
     /* width: 20%; */
+    min-width: 500px;
     padding: 2rem 3rem;
     margin: 0 auto;
     text-align: center;
@@ -37,6 +39,7 @@
   }
 
   .form input {
+   
     width: 100%;
     padding: 10px;
     padding-right: 30px;
@@ -82,6 +85,27 @@
     font-size: 12px;
     color: #aaa;
   }
+    .success-message {
+      text-align: center;
+      padding: 20px;
+      color: #4CAF50;
+      font-size: 1.2rem;
+      line-height: 1.6;
+    }
+  
+    .success-message p {
+      margin-bottom: 15px;
+    }
+        .login-link {
+          font-weight: bold;
+          text-decoration: underline;
+          transition: color 0.3s;
+        }
+    
+        .login-link:hover {
+          color: #3e8e41;
+          text-decoration: none;
+        }
 }
 
 @media only screen and (max-width: 600px) {
@@ -91,6 +115,7 @@
 
   .reset-container .wrapper {
     padding: 2rem;
+    min-width:80%;
   }
 
   .reset-container h2 {
@@ -137,5 +162,6 @@
 @media only screen and (min-width: 1200px) {
   .reset-container .wrapper {
     width: 20%;
+
   }
 }
