--- a/src/App.css
+++ b/src/App.css
@@ -989,6 +989,7 @@ button.Cancel-btn:hover {
     display: grid;
     justify-content: center;
     align-items: center;
+    z-index: 9999;
 }
 
 .popup-content {
@@ -997,7 +998,7 @@ button.Cancel-btn:hover {
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    z-index: 9999;
+    z-index: 1119999;
 }
 
 .popup-buttons {
