--- a/src/css/reset-password.css
+++ b/src/css/reset-password.css
@@ -107,7 +107,9 @@
           text-decoration: none;
         }
 }
-
+.changePass-container {
+  height: 89vh !important;
+}
 @media only screen and (max-width: 600px) {
   .reset-container {
     height: 91vh;
