--- a/src/App.css
+++ b/src/App.css
@@ -474,7 +474,40 @@ header {
 /* canvas {
    background: white
 } */
+.my-custom-select {
+    width: 90px;
+    background-color: #367BE01A;
+    border: none;
+    border-radius: 16px;
+    padding: 5px 10px;
+    font-size: 15px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    cursor: pointer;
+    outline: none;
+}
 
+.select-container {
+    position: relative;
+    display: inline-block;
+}
+
+.select-container::after {
+    content: '⌄';
+    font-size: 20px;
+    color: #555;
+    position: absolute;
+    right: 12px;
+    top: 33%;
+    transform: translateY(-50%);
+    pointer-events: none;
+
+}
+
+.select-container.open::after {
+    content: '▲';
+}
 .MuiFormControlLabel-label.Mui-disabled{
     color:black !important;
 }
