--- a/src/App.css
+++ b/src/App.css
@@ -463,6 +463,21 @@ header {
     background: #e5ecf6;
 }
 
+.percentage-green {
+    font-family: Montserrat;
+    font-weight: 500;
+   font-style: Medium;
+   font-size: 16px;
+   line-height: 20px;
+   letter-spacing: 0%;
+   color:  #33B647;
+
+}
+
+.percentage-green {
+    color: green;
+}
+
 .dash-counter span {
     font-size: 14px;
     font-weight: 600;
